--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,6 @@
 ---
 ##############################################################################
-#                DQV VON NEUMANN Data Quality Checks                         #
+#                Data Quality Checks                                         #
 ##############################################################################
 - process.type: Batch
   sink.type: Console
@@ -8,9 +8,6 @@
   source:
     source.type: CSV
     source.path: src/main/resources/telco/telco-sample-customer-chum.csv
-  target:
-    target.type: CSV
-    target.path: src/main/resources/telco/target-telco-sample-customer-chum.csv
 
   #Telco Data quality rules
   rules:
