--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,53 +8,13 @@
   source:
     source.type: CSV
     source.path: src/main/resources/telco/telco-sample-customer-chum.csv
+  target:
+    target.type: CSV
+    target.path: src/main/resources/telco/target-telco-sample-customer-chum.csv
 
   #Telco Data quality rules
   rules:
     - rule:
-        type: NullCheck
-        value: gender is null
-        description: Percentage of null value in column gender
-    - rule:
-        type: StatisticsRule
-        value: MIN(MonthlyCharges)
-        description: Maximum monthly changes
-    - rule:
-        type:  CategoricalRangeRule
-        value: PaymentMethod IN('Electronic check', 'Mailed check', 'Credit card (automatic)','Bank transfer (automatic)')
-        description: Count of PaymentMethod
-    - rule:
-        type: Uniqueness
+        type: ReconsileRule
         value: customerID
-        description: Percentage of customerID Uniqueness
-    - rule:
-        type: ProportionMissingInPercentage
-        value: customerID
-        description: Percentage of missing customerID
-    - rule:
-        type:  NegativeNumbersRule
-        value: MonthlyCharges < 0
-        description: MonthlyCharges column should have no negative values
-
-
-#Sample parquet file
-- process.type: Batch
-  sink.type: Console
-  report.type: Count
-  source:
-    source.type: Parquet
-    source.path: src/main/resources/sample/
-  # parquet Data quality rules
-  rules:
-    - rule:
-        type: SizeRule
-        value: count(*)
-        description: Total number of parquet rows
-    - rule:
-        type: NullCheck
-        value: age is null
-        description: Total number of null values in column age
-    - rule:
-        type: InvalidEmailRule
-        value: email
-        description: Total number of invalid emails
+        description: Reconsile Source and Target
